# MCP_Codebase_Searcher

./: .env.example  .gitignore  .hidden_test_file.txt  AI_USAGE_GUIDELINES.md  BENCHMARK_ANALYSIS.md  README.md  TODO.md  TROUBLESHOOTING.md  config.py  file_scanner.py  mcp_codebase_searcher_debugging_plan.txt  mcp_elaborate.py  mcp_execution_checklist.md  mcp_search.py  mcp_searcher.py  output_generator.py  potential_bugs_log.txt  prd.txt  pyproject.toml  report_elaborator.py  requirements.txt  task3_checklist.txt  task4_checklist.txt  task5_checklist.txt  task6_checklist.txt  task7_checklist.txt  task8_checklist.txt  task_master_test_plan.txt  test_file_scanner.py  test_mcp_client.py  test_mcp_elaborate.py  test_mcp_search.py  test_output_generator.py
.github/workflows/: publish.yml  python-package.yml
.taskmaster/: state.json
mcp_searcher_test_env/: results.json  results.md  test_config.json
mcp_searcher_test_env/sample_project/: .hidden_file.txt  data.json  file1.txt  file2.py  file_with_long_lines.txt  multiline.txt  special_char_file.txt
mcp_searcher_test_env/sample_project/docs/: doc1.md
mcp_searcher_test_env/sample_project/src/: main.c
src/: cache_manager.py  file_scanner.py  mcp_elaborate.py  mcp_search.py  mcp_searcher.py  mcp_server.py  report_elaborator.py
tests/: test_cache_manager.py  test_file_scanner.py  test_mcp_elaborate.py  test_mcp_search.py  test_mcp_searcher.py  test_output_generator.py  test_report_elaborator.py
